L46/checkers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tester
  namespace: demo-calico
spec:
  containers:
  - name: checker
    image: praqma/network-multitool

---
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: demo-calico
  labels:
    role: client
spec:
  containers:
  - name: checker
    image: praqma/network-multitool
