L46/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-1
  namespace: dev
spec:
  containers:
    - name: app
      image: praqma/network-multitool

---
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  namespace: prod
spec:
  containers:
    - name: app
      image: praqma/network-multitool

---
apiVersion: v1
kind: Service
metadata:
  name: dev-svc
  namespace: dev
spec:
  selector:
    ns: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: prod-svc
  namespace: prod
spec:
  selector:
    ns: prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
